# TikTAKToe

./: .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  README.md  main.cpp  player.cpp  player.hpp
Doc/: ProjectStructure.MD  todo.md
ncurses_variant/: CMakeLists.txt
ncurses_variant/App/: main.cpp
ncurses_variant/include/: helper.h  processing.h  rendering.h
ncurses_variant/src/: helper.cpp  processing.cpp  rendering.cpp
src/: Ai_Easy_Player.cpp  Ai_Easy_Player.hpp  Ai_Player.cpp  Ai_Player.h  Ai_Player.hpp  Board.cpp  Board.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Human.cpp  Human.h  Human_Player.cpp  Human_Player.hpp  Menu_Engine.cpp  Menu_Engine.hpp  Player.cpp  Player.hpp  Resources.hpp  Result.cpp  Result.hpp  Score.cpp  Score.hpp  Score_Keeper.cpp  Score_Keeper.hpp  demo.cpp  helper.hpp  player.cpp  player.hpp  tak.cpp
tests/unit_tests/: CMakeLists.txt  test_Game.cpp  test_math.cpp
